--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -2,7 +2,11 @@
     padding: 0;
     margin: 0;
 }
-html, body{
+html{
+    scroll-behavior: smooth;
+}
+
+body{
     overflow-x: hidden;
 }
 
@@ -14,6 +18,8 @@ html, body{
     align-items: center;
     padding: 20px 40px;
     background-color: #00103a;
+    width: 100vw;
+    box-sizing: border-box;
 }
     
 .primary-navbar nav{
@@ -28,6 +34,7 @@ html, body{
     /* Remove default list styling */
     list-style: none;
     /* Flexbox for menu items */
+    
     display: flex;
     align-items: center;
     gap: 20px;
@@ -35,15 +42,13 @@ html, body{
     margin: 0;
 }
 
-
-
-
 .primary-navbar h2{
     /* Site title styling */
     font-family: Arial, Helvetica, sans-serif;
     font-size: 28px;
     font-weight: bold;
     color:yellow;
+    flex-shrink: 0;
 }
 
 /* Site Logo */
@@ -52,6 +57,7 @@ html, body{
     width: 50px;
     border-radius: 50%;
     margin-left: 20px;
+    flex-shrink: 0;
 }
 /* Hover effect for site logo */
 .primary-navbar img:hover{
@@ -98,6 +104,7 @@ html, body{
     gap: 15px;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .nav-icons i{
@@ -129,6 +136,7 @@ html, body{
     .primary-navbar {
         padding: 10px 20px;
         flex-wrap: wrap;
+        position: relative;
     }
 
     .primary-navbar h2 {
@@ -150,7 +158,9 @@ html, body{
         right: 0;
         background-color: #00103a;
         padding: 10px;
-        display: none;
+        display: none; /* Hide by default */
+        width: 100%;
+        z-index: 1;
     }
 
     .primary-navbar ul.show {
@@ -159,10 +169,16 @@ html, body{
 
     .hamburger {
         display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
     }
 
     .nav-icons {
         gap: 10px;
+        position: absolute;
+        top: 20px;
+        right: 60px;
     }
 
     .nav-icons i {
@@ -178,6 +194,10 @@ html, body{
 
     .primary-navbar ul li a {
         font-size: 16px;
+    }
+
+    .nav-icons {
+        right: 50px;
     }
 
     .nav-icons i {
